# solution-blog-auto

./: .env.example  .gitignore  AGENTS.md  README.md  ROADMAP.md  main.py  pyproject.toml
contracts/: 01_story.md  02_faq.md  03_guide.md  04_comparison.md  05_listicle.md
prompts/: research.md  writer.md
solution_blog_auto/agents/: research_agent.py  writer_agent.py
solution_blog_auto/core/: config.py  contract_loader.py  prompt_loader.py
solution_blog_auto/providers/: base.py  factory.py  gemini_provider.py  glm_provider.py  ollama_provider.py  openai_provider.py  openrouter_provider.py
solution_blog_auto/research/: input.py
solution_blog_auto/services/: contract_selector.py  llm_service.py
solution_blog_auto/workflows/: blog.py  graph.py  nodes.py  state.py
tests/: test_blog_workflow.py  test_contract_loader.py  test_contract_selector.py  test_openrouter_provider.py  test_prompt_loader.py  test_providers.py  test_research_agent.py  test_research_input.py
